--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         <span>A</span>
     </h1>
     <h3>TENGO UNA SORPRESA PARA VOS</h3>
-    <a href="flores.html"><button>Hace click aquí</button></a>
+    <a href="FLORESa.html"><button>Hace click aquí</button></a> 
 </body>
 </html>
